--- a/index2.html
+++ b/index2.html
@@ -98,8 +98,8 @@
                     <li>
                         <a href="#">Performance Setting<span class="fa fa-angle-down"></span></a><br />
                         <ul class="sublevel">
-                            <li><a href="#"> Period</a></li>
-                            <li> <a href="#"> Type</a></li>
+                            <li><a href="corporateportfolio.html"> Corporate Portfolio</a></li>
+                            <li> <a href="#"> Setting Target</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Plan Resource</a></li>
