--- a/corporateportfolio.html
+++ b/corporateportfolio.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <ul class="main-nav">
-            <li ><a href="#" class="menu_dashboard"><i class="fa fa-dashboard"></i><span>DASH BOARD</span></a>
+            <li><a href="#" class="menu_dashboard"><i class="fa fa-dashboard"></i><span>DASH BOARD</span></a>
                 <ul class="sub-nav">
                     <li>
                         <a href="#">Corporate Performance<span class="fa fa-angle-down"></span></a><br/>
@@ -80,7 +80,7 @@
 
                 </ul>
             </li>
-            <li><a href="#" class="menu_plan"><i class="fa fa-calendar"></i><span>PLAN</span></a>
+            <li class="active"><a href="#" class="menu_plan"><i class="fa fa-calendar"></i><span>PLAN</span></a>
                 <ul class="sub-nav">
                     <li>
                         <a href="#">Business Indicator<span class="fa fa-angle-down"></span></a><br/>
@@ -149,7 +149,7 @@
                     <li><a href="#">KPI Test</a></li>
                 </ul>
             </li>
-            <li class="active"><a href="#" class="menu_setting"><i class="fa fa-cog"></i><span>SETTING</span></a>
+            <li><a href="#" class="menu_setting"><i class="fa fa-cog"></i><span>SETTING</span></a>
                 <ul class="sub-nav">
 
                     <li><a href="production.html">Group Management</a></li>
@@ -178,18 +178,14 @@
             <div class="title_page" style="border:none!important;">
                 <div class="row">
 
-                    <div class="title">Artifact Designer</div>
+                    <div class="title">PMS Summary Configuration</div>
 
                 </div>
                 <div class="row">
 
-                    <a href="#" class="text-button" data-toggle="offcanvas" role="button">
-                        <span class="fa fa-desktop"></span>
-                        Full Screen
-                    </a>
-                    <a href="artifactdesigner-new.html" class="text-button">
+                    <a href="#" class="text-button">
                         <span class="fa fa-plus-circle"></span>
-                        New
+                        Add PMS Summary
                     </a>
                 </div>
             </div>
@@ -220,131 +216,34 @@
             </div>
 
                 <div class="col-md-12">
-                    <table class="table table-hover table-striped table-bordered">
+                    <table class="table table-striped table-bordered table-hover table-responsive">
                         <thead>
                         <tr>
-                            <th>No</th>
-                            <th style="width:40%;">Artifact Name</th>
-                            <th style="width:12%;">Graphic Type</th>
-                            <th style="width:30%;">Header Title</th>
-                            <th>Period Aggregation</th>
-                            <th style="width:20%;">Action</th>
-
+                            <th rowspan="2">No</th>
+                            <th rowspan="2">Year</th>
+                            <th rowspan="2">Title</th>
+                            <th rowspan="2">Pillar &amp; KPI</th>
+                            <th rowspan="2">Value Target</th>
+                            <th rowspan="2">Value Achievement</th>
+                            <th rowspan="2">Scoring Indicator</th>
+                            <th rowspan="2">Is Active</th>
+                            <th rowspan="2">Action</th>
                         </tr>
                         </thead>
                         <tbody>
-                        <tr>
 
+                        <tr>
                             <td>1</td>
-                            <td>Plant Availabilty Graphic</td>
-                            <td>Coloumn</td>
-                            <td>2014 - 2007</td>
-                            <td>Yearly</td>
-                             <td class="text-button" style="margin:auto;">
-                                 <a href="#" data-toggle="modal" data-target="#ModalViewArtifact"><span class="fa fa-eye"></span>View</a>
-                                 <a href="artifactdesigner-edit.html"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                                 <a href="#"><span class="fa fa-times"></span>Delete</a>
-
-
-                             </td>
-
-
+                            <td>2015</td>
+                            <td>test</td>
+                            <td class="text-button"><a href="pilarkpi.html"><span class="fa fa-table"></span>Details</a></td>
+                            <td class="text-button"><a href="kpitarget.html"><span class="fa fa-table"></span>Details</a></td>
+                            <td class="text-button"><a href="#"><span class="fa fa-table"></span>Details</td>
+                            <td class="text-button"><a href="#"><span class="fa fa-table"></span>Details</td>
+                            <td>True</td>
+                            <td class="text-button"><a data-target="#modalDialog" data-toggle="modal" href="/PmsSummary/Update/1"><span
+                                    class="fa fa-pencil-square-o"></span>Edit</a></td>
                         </tr>
-                        <tr>
-
-                            <td>2</td>
-                            <td>QHSE Tabular 2</td>
-                            <td>Tabular</td>
-                            <td>QHSE Performance</td>
-                            <td>Undefined</td>
-                            <td class="text-button" style="margin:auto;">
-                                <a href="#" data-toggle="modal" data-target="#ModalViewArtifact"><span class="fa fa-eye"></span>View</a>
-                                <a href="#"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                                <a href="#"><span class="fa fa-times"></span>Delete</a>
-
-                            </td>
-
-
-                        </tr>
-
-                        <tr>
-
-                            <td>3</td>
-                            <td>QHSE Closure Action VS Near Miss</td>
-                            <td>Double Axis</td>
-                            <td>Closure Action VS Near Miss</td>
-                            <td>Monthly</td>
-                            <td class="text-button" style="margin:auto;">
-                                <a href="#" data-toggle="modal" data-target="#ModalViewArtifact"><span class="fa fa-eye"></span>View</a>
-                                <a href="#"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                                <a href="#"><span class="fa fa-times"></span>Delete</a>
-
-
-                            </td>
-
-
-                        </tr>
-
-                        <tr>
-
-                            <td>4</td>
-                            <td>QHSE Training Attend</td>
-                            <td>Double Axis</td>
-                            <td>QHSE Training Attend</td>
-                            <td>Monthly</td>
-                            <td class="text-button" style="margin:auto;">
-                                <a href="#" data-toggle="modal" data-target="#ModalViewArtifact"><span class="fa fa-eye"></span>View</a>
-                                <a href="#"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                                <a href="#"><span class="fa fa-times"></span>Delete</a>
-
-
-                            </td>
-
-
-                        </tr>
-
-                        <tr>
-
-                            <td>5</td>
-                            <td>QHSE Security Incident</td>
-                            <td>Speedometer</td>
-                            <td>QHSE Security Incident</td>
-                            <td>Monthly</td>
-                            <td class="text-button" style="margin:auto;">
-                                <a href="#" data-toggle="modal" data-target="#ModalViewArtifact"><span class="fa fa-eye"></span>View</a>
-                                <a href="#"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                                <a href="#"><span class="fa fa-times"></span>Delete</a>
-
-
-                            </td>
-
-
-                        </tr>
-
-                        <tr>
-
-                            <td>6</td>
-                            <td>QHSE Spider 1</td>
-                            <td>Spider Web 2</td>
-                            <td>QHSE Lagging Indicator</td>
-                            <td>Monthly</td>
-                            <td class="text-button" style="margin:auto;">
-                                <a href="#" data-toggle="modal" data-target="#ModalViewArtifact"><span class="fa fa-eye"></span>View</a>
-                                <a href="#"  data-toggle="modal" data-target="#ModalViewTemplate"><span class="fa fa-pencil-square-o"></span>Edit</a>
-                                <a href="#"><span class="fa fa-times"></span>Delete</a>
-
-
-                            </td>
-
-
-                        </tr>
-
-                        <tr class="greyrow">
-                            <td colspan="5"
-                                style="text-align: left;color:white;background-color:#3f454f!important;"></td>
-                            <td style="background-color:#3f454f;color:white;">Total Data 6 Data</td>
-                        </tr>
-
                         </tbody>
                     </table>
                 </div>
@@ -356,45 +255,83 @@
 </div>
 <!-- ./wrapper -->
 
+
 <!-- Modal -->
-<div class="modal fade bs-example-modal-lg" id="ModalViewArtifact" tabindex="-1" role="dialog"
-     aria-labelledby="ModalViewArtifact" aria-hidden="true">
-    <div class="modal-dialog modal-lg">
+<div class="modal fade bs-example-modal-lg" id="ModalViewTemplate" tabindex="-1" role="dialog"
+     aria-labelledby="ModalViewTemplateLabel" aria-hidden="true">
+    <div class="modal-dialog modal-sm">
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
                         aria-hidden="true">&times;</span></button>
-                <div class="row centering">
-                    <div class="title">2014 - 2007</div>
-                    <div class="description_year">Yearly Range 2014 - 2007</div>
-                </div>
+
 
             </div>
             <div class="modal-body">
-                <div class="btn-group btn-more">
-                    <button type="button" class="dropdown-toggle icon_more" data-toggle="dropdown"
-                            aria-expanded="false">
-                        <span class="fa fa-bars"></span>
-                    </button>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#"><span class="fa fa-print"></span>Print Chart</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#"><span class="fa fa-bar-chart-o"></span>View Tabular</a></li>
-                        <li class="divider"></li>
-                        <li><a href="#"><span class="fa fa-file-image-o"></span>Download PNG Image</a></li>
-                        <li><a href="#"><span class="fa fa-file-image-o"></span>Download JPEG Image</a></li>
-                        <li><a href="#"><span class="fa fa-file-pdf-o"></span>Download PDF Document</a></li>
-                        <li><a href="#"><span class="fa fa-file-text-o"></span>Download SVG Vector Image</a>
-                        </li>
-                    </ul>
+                <form class="form-inline">
+                <div class="form-group">
+                    <label>Template Name :</label>
+                    <input type="text" class="form-control2" placeholder="Safety">
                 </div>
-                <div class="content_tab centering"><img src="css/img/graphic10.PNG"/></div>
+                </form>
+
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label>Dashboard Selection :</label>
+                        <input type="text" class="form-control2" placeholder="">
+                        <input type="text" class="form-control2 form-padding" placeholder="">
+                    </div>
+                    <div class="form-padding" style="margin-bottom:20px;">
+                    <a href="#" class="btn-lightblue" >Add More</a>
+                    <a href="#" class="btn-lightblue" >Print</a>
+                    </div>
+                </form>
+
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label>Refresh Time :</label>
+                        <input type="text" class="form-control2" style="width:45px;" placeholder="1">Minute
+                    </div>
+                </form>
+
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label>Remark :</label>
+                        <textarea class="form-control" rows="5" id="comment"></textarea>
+                    </div>
+                </form>
+
+                <form class="form-inline">
+                    <div class="form-group">
+                        <label>Activate :</label>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                                Yes
+                            </label>
+                        </div>
+                        <div class="radio">
+                            <label>
+                                <input type="radio" name="optionsRadios" id="optionsRadios2" value="option2">
+                                No
+                            </label>
+                        </div>
+                    </div>
+                </form>
+
+                <div class="centering margin">
+                    <hr style="margin-bottom:60px;">
+                    <a href="#" class="btn-darkblue btn-large"><span class="fa fa-floppy-o"></span>Save</a>
+                     <a href="#" class="btn-darkblue btn-large"><span class="fa fa-repeat"></span>Clear</a>
+                    <a data-dismiss="modal" aria-label="Close" class="btn-darkblue btn-large"><span class="fa fa-times"></span>Cancel</a>
+
 
             </div>
 
         </div>
     </div>
 </div>
+
 
 <!-- jQuery 2.0.2 -->
 
