--- a/production.html
+++ b/production.html
@@ -71,7 +71,7 @@
                         <a href="#">Configuration Setting<span class="fa fa-angle-down"></span></a>
                         <ul class="sublevel">
                             <li><a href="#">Template</a></li>
-                            <li><a href="#">Template Editor</a></li>
+                            <li><a href="templateeditor.html">Template Editor</a></li>
                         </ul>
                     </li>
 
@@ -97,8 +97,8 @@
                     <li>
                         <a href="#">Performance Setting<span class="fa fa-angle-down"></span></a><br />
                         <ul class="sublevel">
-                            <li><a href="#"> Period</a></li>
-                            <li> <a href="#"> Type</a></li>
+                            <li><a href="corporateportfolio.html"> Corporate Portfolio</a></li>
+                            <li> <a href="#"> Setting Target</a></li>
                         </ul>
                     </li>
                     <li><a href="#">Plan Resource</a></li>
@@ -154,7 +154,7 @@
                     <li><a href="production.html">Module</a></li>
                     <li><a href="production.html">Menu</a></li>
                     <li><a href="production.html">Audit Trail</a></li>
-                    <li><a href="production.html">Artifact Designer</a></li>
+                    <li><a href="artifactdesigner.html">Artifact Designer</a></li>
                     <li><a href="production.html">Log Out</a></li>
 
                 </ul>
@@ -183,10 +183,6 @@
                 </div>
                 <div class="row">
 
-                    <a href="#" class="text-button" data-toggle="offcanvas" role="button">
-                        <span class="fa fa-desktop"></span>
-                        Full Screen
-                    </a>
                     <a href="#" class="text-button">
                         <span class="fa fa-refresh"></span>
                         Refresh
