--- a/pilarkpi.html
+++ b/pilarkpi.html
@@ -181,50 +181,24 @@
                     <div class="title">PMS Summary Configuration</div>
 
                 </div>
-                <div class="row">
 
-                    <a data-toggle="modal" data-target="#ModalAddPilar" class="text-button">
-                        <span class="fa fa-plus-circle"></span>
-                        Add PMS Config Detail
-                    </a>
-                </div>
-            </div>
-            <div class="col-md-12">
-                <div class="row">
-                    <form class="form-inline form-templateeditor">
-                        <div class="form-group">
-
-                            <input type="text" class="form-control" id="exampleInputEmail3" placeholder="Search">
-
-                        </div>
-                        <a href="#" class="btn-darkblue"><span class="fa fa-search"></span>Search</a>
-                        <a href="#" class="btn-lightblue"><span class="fa fa-repeat"></span>Clear</a>
-                    </form>
-                    <form class="form-inline" style="margin:5px 40px 0px 25px;padding-right:30px;">
-                        <div class="form-group">
-                            <label>Record / Page :</label>
-                            <select class="form-control">
-                                <option>30</option>
-                                <option>45</option>
-                                <option>60</option>
-
-                            </select>
-                        </div>
-                        <a href="#" class="btn-lightblue"><span class="fa fa-refresh"></span>Refresh</a>
-                    </form>
-                </div>
             </div>
 
             <div class="col-md-12">
-            <div class="whitebox-full" style="width:100%;">
-
                 <div class="row-full"><h3>Pilar & Key Performance Indicator</h3><a data-toggle="modal" data-target="#ModalAddPilar" class="btn-lightblue">Add Pilar</a></div>
-                <div class="row-full"><div class="text-grey text-med"><div class="heading">Pilar Name</div>: Safety</div><a data-toggle="modal" data-target="#ModalAddPilar" class="btn-lightblue">Edit Pilar</a></div>
                 <div class="row-full"><div class="text-grey text-med"><div class="heading">Total Score for Pilar</div>: 50</div></div>
             </div>
-            </div>
 
-                <div class="col-md-12">
+            <div class="whitebox-full" style="width:100%;">
+
+                <h3>Safety</h3>
+                <a data-toggle="modal" data-target="#ModalAddPilar" class="text-button pull-right">
+                    <span class="fa fa-plus-circle"></span>Add PMS Config Detail
+                </a>
+                <a data-toggle="modal" data-target="#ModalAddPilar" class="text-button pull-right">
+                    <span class="fa fa-pencil-square-o"></span>Edit Pilar</a>
+
+
                     <table class="table table-striped table-bordered table-responsive table-hover">
                         <thead>
                         <tr>
@@ -249,7 +223,53 @@
                         </tbody>
                     </table>
                 </div>
+
+
+            <div class="whitebox-full" style="width:100%;">
+
+                <h3>Productivity & Efficiency</h3>
+                <a data-toggle="modal" data-target="#ModalAddPilar" class="text-button pull-right">
+                    <span class="fa fa-plus-circle"></span>Add PMS Config Detail
+                </a>
+                <a data-toggle="modal" data-target="#ModalAddPilar" class="text-button pull-right">
+                    <span class="fa fa-pencil-square-o"></span>Edit Pilar</a>
+
+
+                <table class="table table-striped table-bordered table-responsive table-hover">
+                    <thead>
+                    <tr>
+                        <th rowspan="2">Kpi Name</th>
+                        <th rowspan="2">Measurement</th>
+                        <th rowspan="2">Weight</th>
+                        <th rowspan="2">Scoring Type</th>
+                        <th rowspan="2">Scoring Indicator</th>
+                        <th rowspan="2">Action</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+
+                    <tr>
+                        <td>fatality</td>
+                        <td>Case</td>
+                        <td>100</td>
+                        <td>Boolean</td>
+                        <td class="text-button"><a data-target="#modalDialog" data-toggle="modal" href="/PmsConfigDetails/ScoreIndicatorDetails/1"><span class="fa fa-table"></span>View Scoring Indicator</a></td>
+                        <td class="text-button"><a data-target="#modalDialog" data-toggle="modal" href="/PmsConfigDetails/Update/1"><span class="fa fa-pencil-square-o"></span>Edit</a></td>
+                    </tr>
+                    <tr>
+                        <td>fatality</td>
+                        <td>Case</td>
+                        <td>100</td>
+                        <td>Boolean</td>
+                        <td class="text-button"><a data-target="#modalDialog" data-toggle="modal" href="/PmsConfigDetails/ScoreIndicatorDetails/1"><span class="fa fa-table"></span>View Scoring Indicator</a></td>
+                        <td class="text-button"><a data-target="#modalDialog" data-toggle="modal" href="/PmsConfigDetails/Update/1"><span class="fa fa-pencil-square-o"></span>Edit</a></td>
+                    </tr>
+                    </tbody>
+                </table>
             </div>
+
+            </div>
+
         </section>
 
 
