--- a/index2.html
+++ b/index2.html
@@ -186,7 +186,7 @@
                         <form class="form-inline">
                             <div class="form-group"
                                  style="margin:5px 40px 0px 25px;padding-right:30px; border-right:solid 1px #3f454f;">
-                                <label>Year :</label>
+                                <label class="labletop">Year :</label>
                                 <select class="form-control">
                                     <option>2015</option>
                                     <option>2014</option>
@@ -196,7 +196,7 @@
                                 </select>
                             </div>
                             <div class="form-group" style="margin-top:5px;">
-                                <label>Month :</label>
+                                <label class="labletop">Month :</label>
                                 <select class="form-control">
                                     <option>Jan</option>
                                     <option>Feb</option>
