--- a/templateeditor-new.html
+++ b/templateeditor-new.html
@@ -42,7 +42,7 @@
             </div>
         </div>
         <ul class="main-nav">
-            <li><a href="#" class="menu_dashboard"><i class="fa fa-dashboard"></i><span>DASH BOARD</span></a>
+            <li class="active"><a href="#" class="menu_dashboard"><i class="fa fa-dashboard"></i><span>DASH BOARD</span></a>
                 <ul class="sub-nav">
                     <li>
                         <a href="#">Corporate Performance<span class="fa fa-angle-down"></span></a><br/>
@@ -80,7 +80,7 @@
 
                 </ul>
             </li>
-            <li class="active"><a href="#" class="menu_plan"><i class="fa fa-calendar"></i><span>PLAN</span></a>
+            <li><a href="#" class="menu_plan"><i class="fa fa-calendar"></i><span>PLAN</span></a>
                 <ul class="sub-nav">
                     <li>
                         <a href="#">Business Indicator<span class="fa fa-angle-down"></span></a><br/>
@@ -178,103 +178,36 @@
             <div class="title_page" style="border:none!important;">
                 <div class="row">
 
-                    <div class="title">PMS Summary Configuration</div>
+                    <div class="title">Template Editor</div>
+                    <div class="description_year">New</div>
 
                 </div>
-                <div class="row">
-
-                    <a href="#" class="text-button">
-                        <span class="fa fa-plus-circle"></span>
-                        Add PMS Summary
-                    </a>
-                </div>
-            </div>
-           
-
-                <div class="col-md-12">
-                    <table class="table table-striped table-bordered table-hover table-responsive">
-                        <thead>
-                        <tr>
-                            <th rowspan="2">No</th>
-                            <th rowspan="2">Year</th>
-                            <th rowspan="2">Title</th>
-                            <th rowspan="2">Pillar &amp; KPI</th>
-                            <th rowspan="2">Value Target</th>
-                            <th rowspan="2">Value Achievement</th>
-                            <th rowspan="2">Scoring Indicator</th>
-                            <th rowspan="2">Is Active</th>
-                            <th rowspan="2">Action</th>
-                        </tr>
-                        </thead>
-                        <tbody>
-
-                        <tr>
-                            <td>1</td>
-                            <td>2015</td>
-                            <td>test</td>
-                            <td class="text-button"><a href="pilarkpi.html"><span class="fa fa-table"></span>Details</a></td>
-                            <td class="text-button"><a href="kpitarget.html"><span class="fa fa-table"></span>Details</a></td>
-                            <td class="text-button"><a href="#"><span class="fa fa-table"></span>Details</td>
-                            <td class="text-button"><a href="#"><span class="fa fa-table"></span>Details</td>
-                            <td>True</td>
-                            <td class="text-button"><a data-target="#modalDialog" data-toggle="modal" href="/PmsSummary/Update/1"><span
-                                    class="fa fa-pencil-square-o"></span>Edit</a></td>
-                        </tr>
-                        </tbody>
-                    </table>
-                </div>
-            </div>
-        </section>
-
-
-    </aside>
-</div>
-<!-- ./wrapper -->
-
-
-<!-- Modal -->
-<div class="modal fade bs-example-modal-lg" id="ModalViewTemplate" tabindex="-1" role="dialog"
-     aria-labelledby="ModalViewTemplateLabel" aria-hidden="true">
-    <div class="modal-dialog modal-sm">
-        <div class="modal-content">
-            <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span
-                        aria-hidden="true">&times;</span></button>
-
 
             </div>
-            <div class="modal-body">
+
+            <div class="whitebox-full" style="width:100%;">
+
+
                 <form class="form-inline">
+                    <div class="form-group" style="margin-bottom:20px;">
+                        <label>Name :</label>
+                        <input type="text" class="form-control" placeholder="Safety">
+                    </div>
+                </form>
+
+                <form class="form-inline"style="margin-bottom:20px;">
                 <div class="form-group">
-                    <label>Template Name :</label>
-                    <input type="text" class="form-control2" placeholder="Safety">
+                    <label>Refresh Time :</label>
+                    <input type="text" class="form-control" style="width:45px;margin-right:10px;" placeholder="1">Minute
                 </div>
                 </form>
 
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label>Dashboard Selection :</label>
-                        <input type="text" class="form-control2" placeholder="">
-                        <input type="text" class="form-control2 form-padding" placeholder="">
-                    </div>
-                    <div class="form-padding" style="margin-bottom:20px;">
-                    <a href="#" class="btn-lightblue" >Add More</a>
-                    <a href="#" class="btn-lightblue" >Print</a>
-                    </div>
-                </form>
-
-                <form class="form-inline">
-                    <div class="form-group">
-                        <label>Refresh Time :</label>
-                        <input type="text" class="form-control2" style="width:45px;" placeholder="1">Minute
-                    </div>
-                </form>
-
-                <form class="form-inline">
+                <form class="form-inline"style="margin-bottom:20px;">
                     <div class="form-group">
                         <label>Remark :</label>
-                        <textarea class="form-control" rows="5" id="comment"></textarea>
+                        <textarea class="form-control" rows="3" id="comment"></textarea>
                     </div>
+
                 </form>
 
                 <form class="form-inline">
@@ -282,7 +215,7 @@
                         <label>Activate :</label>
                         <div class="radio">
                             <label>
-                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked>
+                                <input type="radio" name="optionsRadios" id="optionsRadios1" value="option1" checked="">
                                 Yes
                             </label>
                         </div>
@@ -295,18 +228,223 @@
                     </div>
                 </form>
 
-                <div class="centering margin">
-                    <hr style="margin-bottom:60px;">
-                    <a href="#" class="btn-darkblue btn-large"><span class="fa fa-floppy-o"></span>Save</a>
-                     <a href="#" class="btn-darkblue btn-large"><span class="fa fa-repeat"></span>Clear</a>
-                    <a data-dismiss="modal" aria-label="Close" class="btn-darkblue btn-large"><span class="fa fa-times"></span>Cancel</a>
+                <div style="margin-left:200px;width:67px;margin-top:20px;">
+                <div class="btn-lightblue">Add Row</div>
+                </div>
 
 
             </div>
 
-        </div>
-    </div>
+
+<div class="col-md-12 row-full">
+                <div class="row"><a class="text-button pull-right" style="margin-right: 40px;">
+                    <span class="fa fa-plus-circle"></span>Add Coloumn
+                </a>
+                    </div>
+                <div class="blue-box ">
+
+                    <button type="button" class="close closeblue"><span>&times;</span></button>
+
+
+                    <div class="centering padding-top">
+                    <form class="form-inline">
+                        <div class="form-group" style="margin-bottom:20px;">
+                            <select class="form-control">
+                                <option>Select Artifact</option>
+                                <option value="2">PRODUCTIVITY AND EFFICIENCY</option>
+                                <option value="3">FINANCIAL STRENGTH</option>
+                                <option value="4">STAKEHOLDER RESPONSIBILITIES</option>
+                            </select>
+                        </div>
+                    </form>
+
+                        <form class="form-inline">
+                            <div class="form-group">
+
+                                <div class="input-group">
+
+                                    <input type="text" class="form-control" id="exampleInputAmount" placeholder="width" style="margin-right:10px;">%
+                                </div>
+                            </div>
+
+                        </form>
+
+                        </div>
+                </div>
+                <div class="blue-box ">
+                    <button type="button" class="close closeblue"><span>&times;</span></button>
+
+
+                    <div class="centering padding-top">
+                        <form class="form-inline">
+                            <div class="form-group" style="margin-bottom:20px;">
+                                <select class="form-control">
+                                    <option>Select Artifact</option>
+                                    <option value="2">PRODUCTIVITY AND EFFICIENCY</option>
+                                    <option value="3">FINANCIAL STRENGTH</option>
+                                    <option value="4">STAKEHOLDER RESPONSIBILITIES</option>
+                                </select>
+                            </div>
+                        </form>
+
+                        <form class="form-inline">
+                            <div class="form-group">
+
+                                <div class="input-group">
+
+                                    <input type="text" class="form-control" id="exampleInputAmount" placeholder="width" style="margin-right:10px;">%
+                                </div>
+                            </div>
+
+                        </form>
+
+                    </div>
+
+                </div>
+
+                <div class="blue-box ">
+
+                    <button type="button" class="close closeblue"><span>&times;</span></button>
+
+
+                    <div class="centering padding-top">
+                        <form class="form-inline">
+                            <div class="form-group" style="margin-bottom:20px;">
+                                <select class="form-control">
+                                    <option>Select Artifact</option>
+                                    <option value="2">PRODUCTIVITY AND EFFICIENCY</option>
+                                    <option value="3">FINANCIAL STRENGTH</option>
+                                    <option value="4">STAKEHOLDER RESPONSIBILITIES</option>
+                                </select>
+                            </div>
+                        </form>
+
+                        <form class="form-inline">
+                            <div class="form-group">
+
+                                <div class="input-group">
+
+                                    <input type="text" class="form-control" id="exampleInputAmount" placeholder="width" style="margin-right:10px;">%
+                                </div>
+                            </div>
+
+                        </form>
+
+                    </div>
+                    </div>
 </div>
+            <div class="col-md-12">
+            <hr>
+            </div>
+
+            <div class="col-md-12 row-full">
+                <div class="row"><a class="text-button pull-right" style="margin-right: 40px;">
+                    <span class="fa fa-plus-circle"></span>Add Coloumn
+                </a>
+                </div>
+                <div class="blue-box ">
+
+                    <button type="button" class="close closeblue"><span>&times;</span></button>
+
+
+                    <div class="centering padding-top">
+                        <form class="form-inline">
+                            <div class="form-group" style="margin-bottom:20px;">
+                                <select class="form-control">
+                                    <option>Select Artifact</option>
+                                    <option value="2">PRODUCTIVITY AND EFFICIENCY</option>
+                                    <option value="3">FINANCIAL STRENGTH</option>
+                                    <option value="4">STAKEHOLDER RESPONSIBILITIES</option>
+                                </select>
+                            </div>
+                        </form>
+
+                        <form class="form-inline">
+                            <div class="form-group">
+
+                                <div class="input-group">
+
+                                    <input type="text" class="form-control" id="exampleInputAmount" placeholder="width" style="margin-right:10px;">%
+                                </div>
+                            </div>
+
+                        </form>
+
+                    </div>
+                </div>
+                <div class="blue-box ">
+                    <button type="button" class="close closeblue"><span>&times;</span></button>
+
+
+                    <div class="centering padding-top">
+                        <form class="form-inline">
+                            <div class="form-group" style="margin-bottom:20px;">
+                                <select class="form-control">
+                                    <option>Select Artifact</option>
+                                    <option value="2">PRODUCTIVITY AND EFFICIENCY</option>
+                                    <option value="3">FINANCIAL STRENGTH</option>
+                                    <option value="4">STAKEHOLDER RESPONSIBILITIES</option>
+                                </select>
+                            </div>
+                        </form>
+
+                        <form class="form-inline">
+                            <div class="form-group">
+
+                                <div class="input-group">
+
+                                    <input type="text" class="form-control" id="exampleInputAmount" placeholder="width" style="margin-right:10px;">%
+                                </div>
+                            </div>
+
+                        </form>
+
+                    </div>
+
+                </div>
+
+                <div class="blue-box ">
+
+                    <button type="button" class="close closeblue"><span>&times;</span></button>
+
+
+                    <div class="centering padding-top">
+                        <form class="form-inline">
+                            <div class="form-group" style="margin-bottom:20px;">
+                                <select class="form-control">
+                                    <option>Select Artifact</option>
+                                    <option value="2">PRODUCTIVITY AND EFFICIENCY</option>
+                                    <option value="3">FINANCIAL STRENGTH</option>
+                                    <option value="4">STAKEHOLDER RESPONSIBILITIES</option>
+                                </select>
+                            </div>
+                        </form>
+
+                        <form class="form-inline">
+                            <div class="form-group">
+
+                                <div class="input-group">
+
+                                    <input type="text" class="form-control" id="exampleInputAmount" placeholder="width" style="margin-right:10px;">%
+                                </div>
+                            </div>
+
+                        </form>
+
+                    </div>
+                </div>
+            </div>
+
+
+        </section>
+
+
+    </aside>
+</div>
+</body>
+<!-- ./wrapper -->
+
+
 
 
 <!-- jQuery 2.0.2 -->
